--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/fonts.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="shortcut icon" href="/assets/favicons.ico">
+    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="shortcut icon" href="assets/favicons.ico">
     <title>Coin Prophet. Cryptocurrency price prediction. Auto-trade.</title>
 </head>
 <body class="is-boxed has-animations">
