--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header">
             <div class="header-wrapper container">
                 <a href="#">
-                    <img src="/assets/cube.svg" alt="svg">
+                    <img src="assets/cube.svg" alt="svg">
                 </a>
             </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="features-wrapper">
                 <div class="features-box feature">
                     <div class="feature-ico">
-                        <img src="/assets/ai.svg" alt="svg">
+                        <img src="assets/ai.svg" alt="svg">
                     </div>
                     <span>Обученная нейросеть</span>
                     <p>Система Coin Prophet базируется на основе обученной 
@@ -104,7 +104,7 @@
                 </div>
                 <div class="features-box feature">
                     <div class="feature-ico">
-                        <img src="/assets/signal.svg" alt="svg">
+                        <img src="assets/signal.svg" alt="svg">
                     </div>
                     <span>Торговые сигналы</span>
                     <p>Система использует торговые сигналы
@@ -114,7 +114,7 @@
                 </div>
                 <div class="features-box feature">
                     <div class="feature-ico">
-                        <img src="/assets/cloud-brain.svg" alt="svg">
+                        <img src="assets/cloud-brain.svg" alt="svg">
                     </div>
                     <span>Непрерывное обучение</span>
                     <p>Входная точка обучения - исторические 
@@ -124,7 +124,7 @@
                 </div>
                 <div class="features-box feature">
                     <div class="feature-ico">
-                        <img src="/assets/bot.svg" alt="svg">
+                        <img src="assets/bot.svg" alt="svg">
                     </div>
                     <span>Телеграм-бот</span>
                     <p>Команда Coin Prophet создала 
@@ -134,7 +134,7 @@
                 </div>
                 <div class="features-box feature">
                     <div class="feature-ico">
-                        <img src="/assets/trade.svg" alt="svg">
+                        <img src="assets/trade.svg" alt="svg">
                     </div>
                     <span>Авто-трейд</span>
                     <p>Система Coin Prophet базируется на основе обученной 
@@ -143,7 +143,7 @@
                 </div>
                 <div class="features-box feature">
                     <div class="feature-ico">
-                        <img src="/assets/stats.svg" alt="svg">
+                        <img src="assets/stats.svg" alt="svg">
                     </div>
                     <span>Торговая статистика</span>
                     <p>Смотрите торговую статистику по всем 
@@ -221,7 +221,7 @@
                     Остались вопросы?
                 </span>
                 <a href="https://t.me/mrcpbot" style="align-items: center;" class="button">
-                    <img src="/assets/telegra-empty.svg" style="width: 24px; height: 24px; padding-bottom: 2px; padding-right: 5px;" alt="telegram">
+                    <img src="assets/telegra-empty.svg" style="width: 24px; height: 24px; padding-bottom: 2px; padding-right: 5px;" alt="telegram">
                     СВЯЗАТЬСЯ
                 </a>
                 
@@ -234,7 +234,7 @@
             <div class="footer-inner">
                 <div class="footer-logo">
                     <a href="#">
-                        <img src="/assets/cube.svg" alt="cube">
+                        <img src="assets/cube.svg" alt="cube">
                     </a>
                     
                 </div>
@@ -246,7 +246,7 @@
                     </div>
                     <div class="footer-links">
                         <a href="https://t.me/coinprophet_talks">
-                            <img src="/assets/telegra-empty.svg" alt="telegram">
+                            <img src="assets/telegra-empty.svg" alt="telegram">
                             Сообщество
                         </a>
                         <a href="https://t.me/mrcpbot">Поддержка</a>
